--- a/css/style.css
+++ b/css/style.css
@@ -5,24 +5,24 @@
 }
 
 body{
-    background-color: rgba(140, 45, 184, 0.795);
+    background-image: url(../img/avengers.jpg);
 }
-
 .container{
-    background-color: crimson;
-    width: 800px;
-    height: 500px;
-    margin: 100px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .slider, .slide{
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .slide img{
-    width: 100%;
-    height: 100%;
+    width: 50%;
     object-fit: cover;
     display: none;
 }
@@ -30,3 +30,5 @@ body{
 .active img{
     display: block;
 }
+
+
